fix: floating label expand beyond input field (#1605)
Truncate floating label on `Form.Control` with CSS.

--- a/src/Form/_Form.scss
+++ b/src/Form/_Form.scss
@@ -187,6 +187,7 @@ $select-icon-padding: .5625rem !default;
     border-top: solid 2px transparent;
     position: relative;
     inset-inline-start: -.5em;
+    max-width: 100%;
   }
 
   .pgn__form-control-floating-label-text {
